💄 🩹 Fix pagination layout issue

--- a/src/questions/pagination/pagination.css
+++ b/src/questions/pagination/pagination.css
@@ -1,6 +1,7 @@
 .pagination {
   margin: 0 auto;
   width: fit-content;
+  display: flex;
 
   border-radius: 4px;
 
